fixed heroImage issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
   flex-direction: column;
   text-align: center;
   /* margin-bottom: 7rem; */
-  margin-top: 3rem;
+  margin-top: 1rem;
   font-size: 1.5rem;
   position: relative;
 
@@ -104,6 +104,7 @@ body {
   @media (max-width: 800px) {
  
     max-width: 99%;
+    padding-bottom: 2rem;
   }
 }
 
@@ -471,7 +472,7 @@ margin-top: -70px;
 .scroll{
   position: absolute;
   bottom: 100px;
-  left: 50%;
+  left: 90%;
   color: var(--accent);
   animation: bounce 2s 3;
 }
@@ -543,12 +544,19 @@ margin-top: -70px;
 
 .heroImage{
   margin-top: 2rem;
+  margin-bottom: 1rem;
 
   width: 400px; /* Set the desired width for the image container */
   max-width: 100%; /* Ensure the container doesn't exceed its parent's width */
   margin-left: auto;
   margin-right: auto;
 
+  @media (max-width: 800px) {
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+  
+    width: 300px; /* Set the desired width for the image container */
+  } 
 
 
 }
